Lots of changes to directory organization, added themes

--- a/pages/r_resources.html
+++ b/pages/r_resources.html
@@ -6,9 +6,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Joe Stoica
+		R Resources
 	</title>
-	<link rel="stylesheet" type="text/css" href="blog.css">
+	<link rel="stylesheet" type="text/css" href="../css/blog.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -19,13 +19,13 @@
 	<!-- Aside -->
 	<aside class="left_bar">
 		<div style="text-align: center">
-			<img src="images/me.jpg" width="100%" />
+			<img src="../images/me.jpg" width="100%" />
 		</div>
 
 		<!-- Nav -->
 
 		<nav id="nav">
-			<a href="index.html"><span>Go back to homepage</span></a>
+			<a href="../index.html"><span>Homepage</span></a>
 			<a href="#beginner">Beginner Resources</a>
 			<a href="#adv">Intermediate Resources</a>
 			<a href="#tips">Tips and Tricks</a>
@@ -68,7 +68,7 @@
 
 			<h3>Downloading R and RStudio</h3>
 			<p>
-				To start using R, download it <a href="https://cran.r-project.org/bin/windows/base/">here.</a> It's free! Once you've completed installation, I cannot emphasize enough how amazing <a href="https://www.rstudio.com/">RStudio</a> is. It is a free (with options to have a paid version, but it is pretty unecessary), open-source integrated development environment (IDE for short) that makes using R so much easier. RStudio is not required, but it will spice up your life in more ways than you could ever imagine. Now that you have RStudio installed, your actual journey can begin. <a href="images/rstudio-ide.pdf">Here</a> is a cheatsheet to familiarize yourself with the IDE if you're completely overwhelmed, or <a href="https://www.youtube.com/watch?v=lVKMsaWju8w">here</a> is a video that can explain what you see!
+				To start using R, download it <a href="https://cran.r-project.org/bin/windows/base/">here.</a> It's free! Once you've completed installation, I cannot emphasize enough how amazing <a href="https://www.rstudio.com/">RStudio</a> is. It is a free (with options to have a paid version, but it is pretty unecessary), open-source integrated development environment (IDE for short) that makes using R so much easier. RStudio is not required, but it will spice up your life in more ways than you could ever imagine. Now that you have RStudio installed, your actual journey can begin. <a href="../images/rstudio-ide.pdf">Here</a> is a cheatsheet to familiarize yourself with the IDE if you're completely overwhelmed, or <a href="https://www.youtube.com/watch?v=lVKMsaWju8w">here</a> is a video that can explain what you see!
 			</p>
 			<h2>Learning Resources</h2>
 			<h3>Swirl</h3>
@@ -131,9 +131,9 @@
 			<h3>Cheatsheets I use Often</h3>
 			<p>Some of these are available in RStudio, if you go to help > cheatsheets!</p>
 			<ul>
-				<li><a href="images/ggplot.pdf">ggplot cheatsheet</a></li>
-				<li><a href="images/rmd.pdf">R Markdown cheatsheet</a></li>
-				<li><a href="images/dplyr.pdf">dplyr cheatsheet</a></li>
+				<li><a href="../images/ggplot.pdf">ggplot cheatsheet</a></li>
+				<li><a href="../images/rmd.pdf">R Markdown cheatsheet</a></li>
+				<li><a href="../images/dplyr.pdf">dplyr cheatsheet</a></li>
 			</ul>
 			<h3>Functions to Make Life Easy</h3>
 			<h4>dput()</h4>
