--- a/pages/template.html
+++ b/pages/template.html
@@ -6,10 +6,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Joe Stoica
+		Template
 	</title>
-	<link rel="stylesheet" type="text/css" href="blog.css">
+	<link rel="stylesheet" type="text/css" href="../css/blog.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="../images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <!-- Body -->
@@ -19,14 +20,13 @@
 	<!-- Aside -->
 	<aside class="left_bar">
 		<div style="text-align: center">
-			<img src="images/me.jpg" width="100%" />
+			<img src="../images/me.jpg" width="100%" />
 		</div>
 
 		<!-- Nav -->
 
 		<nav id="nav">
-			<a href="index.html"><span>Home</span></a>
-
+			<a href="../index.html"><span>Homepage</span></a>
 		</nav>
 
 
@@ -40,10 +40,6 @@
 	</aside>
 
 	<main>
-		<article>
-
-		</article>
-
 	</main>
 
 </body>
