--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Joe Stoica
+		Joe's Homepage
 	</title>
-	<link rel="stylesheet" type="text/css" href="blog.css">
+	<link rel="stylesheet" type="text/css" href="css/blog.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <!-- Body -->
@@ -49,15 +50,14 @@
 		<h2><u id="about">About Me</u></h2>
 
 		<p>
-			I am currently a senior at Indiana University pursuing a degree in Statistics, with minors in Mathematics and Biology. My passion is trying to uncover the underlying story that is hidden in the data and share these stories in a publicly accessible and
-			easy to understand way.
+			I am currently a senior at Indiana University pursuing a degree in Statistics, with minors in Mathematics and Biology. My passion is trying to objectively uncover the underlying story that is hidden in data and share these stories in a publicly accessible and easy to understand way.
 		</p>
 
 		<h2><u id="skills">My skills</u></h2>
 
 		<ul>
 			<!--R-->
-			<li><strong>R:</strong> Used for exploratory data analysis, statistical model building, and statistical diagnostics and inference.</li>
+			<li><strong>R:</strong> Used for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference.</li>
 
 			<!--Python-->
 			<li><strong>Python:</strong> Currently taking the <a href="https://www.udemy.com/complete-python-bootcamp/learn/v4/overview"> Python Bootcamp</a> course on Udemy.com to learn the fundamental concepts of Python.</li>
@@ -88,19 +88,17 @@
 
 			<p >
 				<ul>
-					<li><a href="tidytuesday.html">Tidy Tuesday</a> submissions.</li>
+					<li><a href="pages/tidytuesday.html">Tidy Tuesday</a> submissions.</li>
 				</ul>
 			</p>
 
 			<h2><u id="misc">Misc</u></h2>
 
 			<ul>
-				<li> <a href="#">Beginner's Guide to Getting Started in R</a> </li>
-				<li> <a href="#">(Coming soon!) Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
+				<li> <a href="pages/r_resources.html">Beginner's Guide to Getting Started in R</a> </li>
+				<li> <a href="pages/themes.html">(Coming soon!) Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
 				<li><a href="#">(Coming soon!) Color palettes I enjoy!</a></li>
 			</ul>
-
-
 		</main>
 
 	</body>
