--- a/pages/tidytuesday.html
+++ b/pages/tidytuesday.html
@@ -6,9 +6,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Joe Stoica
+		Tidy Tuesday
 	</title>
-	<link rel="stylesheet" type="text/css" href="blog.css">
+	<link rel="stylesheet" type="text/css" href="../css/blog.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -19,14 +19,13 @@
 	<!-- Aside -->
 	<aside class="left_bar">
 		<div style="text-align: center">
-			<img src="images/me.jpg" width="100%" />
+			<img src="../images/me.jpg" width="100%" />
 		</div>
 
 		<!-- Nav -->
 
 		<nav id="nav">
-			<a href="index.html"><span>Home</span></a>
-
+			<a href="../index.html"><span>Homepage</span></a>
 		</nav>
 
 
@@ -48,23 +47,23 @@
 		</article>
 
 		<article >
-			<h2>Week 13</h2>
+			<h2><u>Week 13</u> </h2>
 			<p>
-				Week 13 involves global alcohol consumption throughout the world. Here is the <a href="rmd/week13.html">R markdown.</a>
+				Week 13 involves global alcohol consumption throughout the world. Here is the <a href="../rmd/week13.html">R markdown.</a>
 			</p>
 		</article>
 
 		<article >
-			<h2>Week 14</h2>
+			<h2><u>Week 14</u></h2>
 			<p>
-				Week 14 dealt with changes in global life expectancy throughout primarily in the past fifty years. Here is the <a href="rmd/week14.html">R markdown.</a>
+				Week 14 dealt with changes in global life expectancy throughout primarily in the past fifty years. Here is the <a href="../rmd/week14.html">R markdown.</a>
 			</p>
 		</article>
 
 		<article >
-			<h2>Week 15</h2>
+			<h2><u>Week 15</u></h2>
 			<p>
-				This week we examined craft breweries in the United States. Here is the <a href="rmd/week15.html">R markdown.</a>
+				This week we examined craft breweries in the United States. Here is the <a href="../rmd/week15.html">R markdown.</a>
 			</p>
 		</article>
 
