--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 			<ul>
 				<li> <a href="pages/r_resources.html">Beginner's Guide to Getting Started in R</a> </li>
-				<li> <a href="pages/themes.html">(Coming soon!) Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
+				<li> <a href="pages/themes.html">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
 				<li><a href="#">(Coming soon!) Color palettes I enjoy!</a></li>
 			</ul>
 		</main>
