--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
 	<main>
 		<h1><small>Hi, my name is<br></small> Joe Stoica</h1>
-
+		<p>
+			<i>“Distinguishing the signal from the noise requires both scientific knowledge and self-knowledge: the serenity to accept the things we cannot predict, the courage to predict the things we can, and the wisdom to know the difference.” - Nate Silver </i>
+		</p>
 		<h2><u id="about">About Me</u></h2>
 
 		<p>
