--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<a href="#about" class="hvr"><span>About</span></a>
 			<a href="#skills" class="hvr"><span>Skills</span></a>
 			<a href="#exp" class="hvr"><span>Experience</span></a>
-			<a href="#project" class="hvr"><span>Portfolio</span></a>
+			<a href="#project" class="hvr"><span>My Work</span></a>
 			<a href="#misc" class="hvr"><span>Miscellaneous</span></a>
 		</nav>
 
