Changes to markov and rmd

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/blog.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <!-- Body -->
@@ -30,7 +29,7 @@
 			<a href="#skills" class="hvr"><span>Skills</span></a>
 			<a href="#exp" class="hvr"><span>Experience</span></a>
 			<a href="#project" class="hvr"><span>My Work</span></a>
-			<a href="#misc" class="hvr"><span>Miscellaneous</span></a>
+			<a href="#misc" class="hvr"><span>Blog</span></a>
 		</nav>
 
 
@@ -94,11 +93,12 @@
 				</ul>
 			</p>
 
-			<h2><u id="misc">Misc</u></h2>
+			<h2><u id="misc">Blog</u></h2>
 
 			<ul>
-				<li> <a href="pages/r_resources.html">Beginner's Guide to Getting Started in R</a> </li>
-				<li> <a href="pages/themes.html">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
+				<li><a href="blog/markov.html">Markov Chain Text Generation in R</a> </li>
+				<li> <a href="blog/r_resources.html">Beginner's Guide to Getting Started in R</a> </li>
+				<li> <a href="blog/themes.html">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
 				<li><a href="#">(Coming soon!) Color palettes I enjoy!</a></li>
 			</ul>
 		</main>
