--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
 
 		<!--  Links -->
 		<ul class="links">
-			<li><a href="https://twitter.com/Joe_Stoica" class="fa fa-twitter"></a></li>
+			<li><a href="mailto:joe.stoica@gmail.com" class="fa fa-envelope"></a></li>
 			<li><a href="https://www.linkedin.com/in/joe-stoica/" class="fa fa-linkedin"></a></li>
 			<li><a href="https://github.com/joestoica" class="fa fa-github"></a></li>
-			<li><a href="mailto:joe.stoica@gmail.com" class="fa fa-envelope"></a></li>
+			<li><a href="https://twitter.com/Joe_Stoica" class="fa fa-twitter"></a></li>
 		</ul>
 	</aside>
 
 
 	<main>
+		<!--<header>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</header>-->
+
 		<h1><small>Hi, my name is<br></small> Joe Stoica</h1>
 		<p>
 			<i>“Distinguishing the signal from the noise requires both scientific knowledge and self-knowledge: the serenity to accept the things we cannot predict, the courage to predict the things we can, and the wisdom to know the difference.” - Nate Silver </i>
@@ -72,17 +76,17 @@
 
 		<ul>
 			<!--Upland-->
-			<li>Finance and Operations Intern at <a href="https://www.uplandbeer.com/">Upland Brewing Company</a> in Bloomington, IN. I am currently analyzing product margins throughout the supply chain.</li>
+			<li>Finance and Operations Intern at <a href="https://www.uplandbeer.com/">Upland Brewing Company</a> in Bloomington, IN. I analyzed product margins throughout the supply chain</li>
 
 			<!--UTA-->
 			<li>Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html">Dr. Tara Darcy-Hall.</a> I was responsible for teaching my own discussion section, holding office hours, and grading various assignments.</li>
 
 			<!--Rosvall-->
 			<li><a href="http://www.indiana.edu/~krosvlab/">Rosvall Lab Employee.</a> I aided in data collection at our field sites, along with RFID maintenance at our bird boxes. I also wrote
-				<a href="https://github.com/joestoica/Rosvall">an R program</a> that tidies RFID data and visualizes tree swallow activity at their nests.</li>
+				<a href="https://github.com/joestoica/Rosvall-Lab/blob/master/Nest%20Box%20Plotter.Rmd">an R script</a> that tidies RFID data and visualizes tree swallow activity at their nests using the ggplotly package.</li>
 
-				<!--IUDM-->
-				<li>Culture subcommittee chair for the Riley Development committee for <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal">Indiana University Dance Marathon.</a></li>
+				<!--IUDM
+				<li>Culture subcommittee chair for the Riley Development committee for <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal">Indiana University Dance Marathon.</a></li>-->
 			</ul>
 
 			<h2><u id="project">My Work</u></h2>
@@ -90,17 +94,22 @@
 			<p >
 				<ul>
 					<li><a href="pages/tidytuesday.html">Tidy Tuesday</a> submissions.</li>
+					<li><a href="blog/markov.html">Markov Chain Text Generation in R</a> </li>
+					<li><a href="blog/election.html">2016 United States Presidential Eleciton Leaflet Map</a> </li>
 				</ul>
 			</p>
 
 			<h2><u id="misc">Blog</u></h2>
 
 			<ul>
-				<li><a href="blog/markov.html">Markov Chain Text Generation in R</a> </li>
 				<li> <a href="blog/r_resources.html">Beginner's Guide to Getting Started in R</a> </li>
 				<li> <a href="blog/themes.html">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
-				<li><a href="#">(Coming soon!) Color palettes I enjoy!</a></li>
 			</ul>
+
+			<h2><u id="misc">Contact</u></h2>
+			<p>
+				Feel free to contact me <a href="mailto:joestoica@gmail.com">by sending me an email.</a>
+			</p>
 		</main>
 
 	</body>
