--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
 
 	<!-- Aside -->
-	<aside class="left_bar">
-		<div style="text-align: center">
+	<aside class="top_bar">
+		<!--<div style="text-align: center">
 			<img src="images/me.jpg" width="100%" />
-		</div>
+		</div>-->
 
 		<!-- Nav -->
 
@@ -44,9 +44,6 @@
 
 
 	<main>
-		<!--<header>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</header>-->
 
 		<h1><small>Hi, my name is<br></small> Joe Stoica</h1>
 		<p>
@@ -95,7 +92,7 @@
 				<ul>
 					<li><a href="pages/tidytuesday.html">Tidy Tuesday</a> submissions.</li>
 					<li><a href="blog/markov.html">Markov Chain Text Generation in R</a> </li>
-					<li><a href="blog/election.html">2016 United States Presidential Eleciton Leaflet Map</a> </li>
+					<li><a href="blog/election.html">2016 United States Presidential Election Leaflet Map</a> </li>
 				</ul>
 			</p>
 
