--- a/pages/tidytuesday.html
+++ b/pages/tidytuesday.html
@@ -1,74 +1,70 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Joe Stoica</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../css/theme.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  </head>
+  <body>
 
-<!-- Head  -->
-
-<head>
-	<meta charset="utf-8">
-	<title>
-		Tidy Tuesday
-	</title>
-	<link rel="stylesheet" type="text/css" href="../css/blog.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-
-<!-- Body -->
-
-<body>
-
-	<!-- Aside -->
-	<aside class="left_bar">
-		<div style="text-align: center">
-			<img src="../images/me.jpg" width="100%" />
-		</div>
-
-		<!-- Nav -->
-
-		<nav id="nav">
-			<a href="../index.html"><span>Homepage</span></a>
-		</nav>
+    
+    <!-- Header -->
+    <div class="header">
+      <div>
+	<h1>Tidy Tuesday Submissions</h1>
+      </div>
+    </div>
 
 
-		<!--  Links -->
-		<ul class="links">
-			<li><a href="https://twitter.com/Joe_Stoica" class="fa fa-twitter"></a></li>
-			<li><a href="https://www.linkedin.com/in/joe-stoica/" class="fa fa-linkedin"></a></li>
-			<li><a href="https://github.com/joestoica" class="fa fa-github"></a></li>
-			<li><a href="mailto:joe.stoica@gmail.com" class="fa fa-envelope"></a></li>
-		</ul>
-	</aside>
+    <div class="col space">
+      <div class="title">
+	<h1>Tidy Tuesday?</h1>
+	<p>
+	  Tidy Tuesday is a data project hosted every week by the R for Data Science learning community. Anyone is welcome to participate, and are encouraged to colloborate and share their findings on Twitter with the R4DS community. This page contains my R markdowns for my submissions.
+	</p>
+</article>
 
-	<main>
-		<article>
-			<h1><small>What is</small><br>Tidy Tuesday?</h1>
-			<p>
-				Tidy Tuesday is a data project hosted every week by the R for Data Science learning community. Anyone is welcome to participate, and are encouraged to colloborate and share their findings on Twitter with the R4DS community. This page contains my R markdowns for my submissions!
-			</p>
-		</article>
+<article >
+  <h2><u>Week 13</u> </h2>
+  <p>
+    Week 13 involves global alcohol consumption throughout the world. Here is the <a href="../rmd/week13.html">R markdown.</a>
+  </p>
+</article>
 
-		<article >
-			<h2><u>Week 13</u> </h2>
-			<p>
-				Week 13 involves global alcohol consumption throughout the world. Here is the <a href="../rmd/week13.html">R markdown.</a>
-			</p>
-		</article>
+<article >
+  <h2><u>Week 14</u></h2>
+  <p>
+    Week 14 dealt with changes in global life expectancy throughout primarily in the past fifty years. Here is the <a href="../rmd/week14.html">R markdown.</a>
+  </p>
+</article>
 
-		<article >
-			<h2><u>Week 14</u></h2>
-			<p>
-				Week 14 dealt with changes in global life expectancy throughout primarily in the past fifty years. Here is the <a href="../rmd/week14.html">R markdown.</a>
-			</p>
-		</article>
+<article >
+  <h2><u>Week 15</u></h2>
+  <p>
+    This week we examined craft breweries in the United States. Here is the <a href="../rmd/week15.html">R markdown.</a>
+  </p>
+</div>
+</div>
 
-		<article >
-			<h2><u>Week 15</u></h2>
-			<p>
-				This week we examined craft breweries in the United States. Here is the <a href="../rmd/week15.html">R markdown.</a>
-			</p>
-		</article>
-
-	</main>
+<div class="footer">
+  <div>  
+    <a href="../index.html" target="blank"><i class="fa fa-home fa-3x"></i></a>
+  </div>  
+  <div>
+    <a href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-3x"></i></a>
+  </div>
+  <div>
+    <a href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-3x"></i></a>
+  </div>
+  <div>
+    <a href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-3x"></i></a>
+  </div>
+  <div>
+    <a href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-3x"></i></a>
+  </div>
+</div>
 
 </body>
-
 </html>
