--- a/pages/markov.html
+++ b/pages/markov.html
@@ -11,8 +11,8 @@
 
     
     <!-- Header -->
-    <div class="header">
-      <div>
+    <div class="pages_header">
+      <div class="header_item">
 	<h1>Using 1.6 Million Tweets with a Markov Chain Text Generator</h1>
 	<h3 style="justify-content: flex-end;">Aug 08, 2018</h3>
       </div>
