--- a/pages/election.html
+++ b/pages/election.html
@@ -11,8 +11,8 @@
 
     
     <!-- Header -->
-    <div class="header">
-      <div>
+    <div class="pages_header">
+      <div class="header_item">
 	<h1>Examining the 2016 Presidential Election</h1>
       </div>
     </div>
