--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
    
     <!-- Header -->
     <div class="header">      
-      <div class="background-image" style="background-image: url(images/mountain.jpg);"></div>      
+      <div class="background-image" style="background-image: url(images/mountain.jpg);"></div>
       <div class="header_item">
-	<h1><span id="typed"></span></h1>
-      </div>      
+	  <h1 class="header_h1"><span id="typed"></span></h1>
+      </div>
     </div>
-
+    
     <!-- bio -->
     <div class="bio">
       <div>
