--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="avatar_item">
 	  <img src="images/me.jpg" width="250px;" class="avatar"></img>
 	</div>	
-	<div class="row_item">I am currently a senior at Indiana University pursuing a degree in Statistics, with minors in Mathematics and Biology. To me, Statistics is incredibly fun and deeply rewarding, and my primary interests include linear modeling techniques, data visualization, and exploratory data analysis. However, my real passion for Statistics is being able to search for objective truths that are hidden in the data I work with, and being able to report these truths in an unbiased and publicly accessible manner.
+	<div class="row_item">I am currently a senior at Indiana University pursuing a degree in Statistics, with minors in Mathematics and Biology. To me, Statistics is incredibly fun and deeply rewarding, and my primary interests include linear modeling techniques, data visualization, and exploratory data analysis. However, my real passion for Statistics is searching for objective truths that are hidden in the data I work with, and reporting my findings in an unbiased and publicly accessible manner.
 	</div>
       </div>    
     </div>
