fixed links and updated bio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="avatar_item">
 	  <img src="images/me.jpg" width="250px;" class="avatar"></img>
 	</div>	
-	<div class="row_item">I am currently a senior at Indiana University pursuing a degree in Statistics, with minors in Mathematics and Biology. To me, Statistics is incredibly fun and deeply rewarding, and my primary interests include linear modeling techniques, data visualization, and exploratory data analysis. However, my real passion for Statistics is searching for objective truths that are hidden in the data I work with, and reporting my findings in an unbiased and publicly accessible manner.
+	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. I believe statistics is both an enjoyable and deeply rewarding career. My primary interests in the field include linear modeling techniques, data visualization, and exploratory data analysis. Another sincere interest of mine is researching and identifying objective truths found within the data sets I work with. Reporting data in an unbiased and publicly accessible manner is something I highly value.
 	</div>
       </div>    
     </div>
@@ -40,8 +40,8 @@
       <div class="item">
 	<h2> My Experience </h2>
 	<ul>
-	  <li>Finance and Operations intern at <a href="https://www.uplandbeer.com/">Upland Brewing Company.</a></li>
-	  <li>Employee in the <a href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a>.</li>
+	  <li>Finance and Operations intern at <a target="_blank" rel="noopener noreferrer" href="https://www.uplandbeer.com/">Upland Brewing Company.</a></li>
+	  <li>Employee in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a>.</li>
 	  <li>Undergraduate Teaching Instructor for BIOL-L 111.</li>
 	</ul>
       </div>      
@@ -49,7 +49,7 @@
 	<h2>My Skills</h2>
 	<ul>
 	  <li><strong>R: </strong>Used for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference.</li>
-	  <li><strong>Python: </strong>Currently taking the Python Bootcamp course on Udemy.com to learn the fundamental concepts of Python. My data visualization course is also in Python.</li>
+	  <li><strong>Python: </strong> I am currently enrolled in a data visualization course, which is taught in Python. We work with data science libraries, such as pandas, numpy, matplotlib, and altair.</li>
 	  <li><strong>SQL: </strong>Used to learn the basics of querying databases</li>
 	</ul>
       </div>
@@ -60,32 +60,32 @@
       <div><h2>My Work</h2></div>    
       <div class="work">	
 	<div class="work_item">
-	  <a href="pages/tidytuesday.html">Tidy Tuesday Submissions</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/tidytuesday.html">Tidy Tuesday Submissions</a>
 	</div>	
 	<div class="work_item">
-	  <a href="pages/markov.html">Markov Chain Text Generation in R</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in R</a>
 	</div>	
 	<div class="work_item">
-	  <a href="pages/election.html">2016 Presidential Election Leaflet Map</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/election.html">2016 Presidential Election Leaflet Map</a>
 	</div>	
 	<div class="work_item">
-	  <a href="pages/guide.html">Beginner's Guide to Getting Started in R</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/guide.html">Beginner's Guide to Getting Started in R</a>
 	</div>
       </div>
     </div>
 
     <div class="footer">
       <div>
-	<a href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-3x"></i></a>
+	<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-3x"></i></a>
       </div>
       <div>
-	<a href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-3x"></i></a>
+	<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-3x"></i></a>
       </div>
       <div>
-	<a href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-3x"></i></a>
+	<a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-3x"></i></a>
       </div>
       <div>
-	<a href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-3x"></i></a>
+	<a target="_blank" rel="noopener noreferrer" href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-3x"></i></a>
       </div>
     </div>
 
