Fixed avatar resizing.
Avatar now scales with window size and disappears on mobile to save space.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   
   <body>
-   
+    
     <!-- Header -->
     <div class="header">      
       <div class="background-image" style="background-image: url(images/mountain.jpg);"></div>
       <div class="header_item">
-	  <h1 class="header_h1"><span id="typed"></span></h1>
+	<h1 class="header_h1"><span id="typed"></span></h1>
       </div>
     </div>
     
@@ -28,7 +28,7 @@
       </div>      
       <div class="row">
 	<div class="avatar_item">
-	  <img src="images/me.jpg" width="250px;" class="avatar"></img>
+	  <img src="images/me.jpg" class="avatar"></img>
 	</div>	
 	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. I believe statistics is both an enjoyable and deeply rewarding career. My primary interests in the field include linear modeling techniques, data visualization, and exploratory data analysis. Another sincere interest of mine is researching and identifying objective truths found within the data sets I work with. Reporting data in an unbiased and publicly accessible manner is something I highly value.
 	</div>
@@ -50,7 +50,7 @@
 	<ul>
 	  <li><strong>R: </strong>Used for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference.</li>
 	  <li><strong>Python: </strong> I am currently enrolled in a data visualization course, which is taught in Python. We work with data science libraries, such as pandas, numpy, matplotlib, and altair.</li>
-	  <li><strong>SQL: </strong>Used to learn the basics of querying databases</li>
+	  <li><strong>SQL: </strong>Used to learn the basics of querying databases.</li>
 	</ul>
       </div>
     </div>
