added new background photo and dviz assignments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <!-- Header -->
     <div class="header">      
-      <div class="background-image" style="background-image: url(images/mountain.jpg);"></div>
+      <div class="background-image" style="background-image: url(images/mountain1.jpg);"></div>
       <div class="header_item">
 	<h1 class="header_h1"><span id="typed"></span></h1>
       </div>
@@ -30,7 +30,7 @@
 	<div class="avatar_item">
 	  <img src="images/me.jpg" class="avatar"></img>
 	</div>	
-	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. I believe statistics is both an enjoyable and deeply rewarding career. My primary interests in the field include linear modeling techniques, data visualization, and exploratory data analysis. Another sincere interest of mine is researching and identifying objective truths found within the data sets I work with. Reporting data in an unbiased and publicly accessible manner is something I highly value.
+	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. I believe statistics is both an enjoyable and deeply rewarding career. My primary interests in the field include linear modeling techniques, data visualization, and exploratory data analysis. Another sincere interest of mine is researching and identifying objective truths found within the data I work with, because I highly value reporting my findings  in an unbiased and publicly accessible manner.
 	</div>
       </div>    
     </div>
@@ -40,16 +40,16 @@
       <div class="item">
 	<h2> My Experience </h2>
 	<ul>
-	  <li>Finance and Operations intern at <a target="_blank" rel="noopener noreferrer" href="https://www.uplandbeer.com/">Upland Brewing Company.</a></li>
-	  <li>Employee in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a>.</li>
-	  <li>Undergraduate Teaching Instructor for BIOL-L 111.</li>
+	  <li>Finance and Operations intern at <a target="_blank" rel="noopener noreferrer" href="https://www.uplandbeer.com/">Upland Brewing Company</a>, focusing on production margins throughout the supply chain</li>
+	  <li>Employee in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a> field aide.</li>
+	  <li>Undergraduate Teaching Instructor for <a target="_blank" rel ="noopener noreferrer" href="https://registrar.indiana.edu/browser/soc4182/BIOL/BIOL-L111.shtml">BIOL-L 111:</a> Foundations of Biology: Diversity, Evolution, and Ecology.</li>
 	</ul>
       </div>      
       <div class="item">
 	<h2>My Skills</h2>
 	<ul>
 	  <li><strong>R: </strong>Used for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference.</li>
-	  <li><strong>Python: </strong> I am currently enrolled in a data visualization course, which is taught in Python. We work with data science libraries, such as pandas, numpy, matplotlib, and altair.</li>
+	  <li><strong>Python: </strong> I am currently enrolled in a data visualization course, which is taught in Python. We work with data science libraries such as pandas, numpy, matplotlib, seaborn, and altair.</li>
 	  <li><strong>SQL: </strong>Used to learn the basics of querying databases.</li>
 	</ul>
       </div>
@@ -96,8 +96,8 @@
     "I am a Data Analyst",
     "I am a Statistician",
     "I am Joe Stoica"],
-    typeSpeed: 35,
-    backSpeed: 20,
+    typeSpeed: 30,
+    backSpeed: 30,
     loop: false,
     });
   </script>
