--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <html>
   <head>
     <title>Joe Stoica</title>
     <meta charset="UTF-8">
@@ -30,7 +31,7 @@
 	<div class="avatar_item">
 	  <img src="images/me.jpg" class="avatar"></img>
 	</div>	
-	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. I believe statistics is both an enjoyable and deeply rewarding career. My primary interests in the field include linear modeling techniques, data visualization, and exploratory data analysis. Another sincere interest of mine is researching and identifying objective truths found within the data I work with, because I highly value reporting my findings  in an unbiased and publicly accessible manner.
+	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. When I'm not focusing on statistical work, I hate rock climbing, listening to music, and making the best darn cup of coffee you'll ever try.
 	</div>
       </div>    
     </div>
@@ -40,17 +41,18 @@
       <div class="item">
 	<h2> My Experience </h2>
 	<ul>
-	  <li>Finance and Operations intern at <a target="_blank" rel="noopener noreferrer" href="https://www.uplandbeer.com/">Upland Brewing Company</a>, focusing on production margins throughout the supply chain</li>
-	  <li>Employee in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a> field aide.</li>
-	  <li>Undergraduate Teaching Instructor for <a target="_blank" rel ="noopener noreferrer" href="https://registrar.indiana.edu/browser/soc4182/BIOL/BIOL-L111.shtml">BIOL-L 111:</a> Foundations of Biology: Diversity, Evolution, and Ecology.</li>
+	  <li>Last summer, I had the opportunity to be the Finance and Operations intern at <a target="_blank" rel="noopener noreferrer" href="https://www.uplandbeer.com/">Upland Brewing Company</a>.There I focused on production margins throughout the supply chain, and wrote a comprehensive summarizing my findings report using RMarkdown. </li>
+	  <li>This spring I've had the opportunity to be a research assistant in the <a target="_blank" rel="noopener noreferrer" href="http://www.indiana.edu/~cogdev/">Cognitive Development Lab</a> at Indiana University. I will be aiding in the process of data cleaning, helped with general statistical questions, and I'll soon be choosing a semester long project. More to come!</li>
+	  <li>Former undergraduate research assistant in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a>. I helped assist with data collection on tree swallows, as well as maintain the RFID readers at our field sites.</li>
+	  <li>Undergraduate Teaching Instructor for <a target="_blank" rel ="noopener noreferrer" href="https://registrar.indiana.edu/browser/soc4182/BIOL/BIOL-L111.shtml">BIOL-L 111:</a> Foundations of Biology: Diversity, Evolution, and Ecology. This is my second semester being a UTA, and I really enjoy gaining experience teaching fellow students.</li>
 	</ul>
       </div>      
       <div class="item">
 	<h2>My Skills</h2>
 	<ul>
-	  <li><strong>R: </strong>Used for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference.</li>
-	  <li><strong>Python: </strong> I am currently enrolled in a data visualization course, which is taught in Python. We work with data science libraries such as pandas, numpy, matplotlib, seaborn, and altair.</li>
-	  <li><strong>SQL: </strong>Used to learn the basics of querying databases.</li>
+	  <li><strong>Racket: </strong>I use Racket literally every day of my life. In school, I used it constantly for the majority of my classes. I primarily use Racket for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference. Similarly, through school I've learned dimensionality reduction techniques and other data mining algorithms.</li>
+	  <li><strong>Python: </strong> Last semester I was enrolled in a data visualization course, which is taught in Python. We were taught about vlarious data science libraries, such as pandas and numpy. We then visualizated our data using matplotlib, seaborn, and altair.</li>
+	  <li><strong>SQL: </strong>Used to learn the basics of running and querying databases. For example, I downloaded a  database that includes <a target="_blank" rel="noopener noreferrer" href="https://ergast.com/mrd/db/">data from every Formula 1 racing season</a>. I wrote queries that would export the database into several CSVs, and then visualized my findings in R. Blog post coming soon!</li>
 	</ul>
       </div>
     </div>
@@ -63,13 +65,13 @@
 	  <a target="_blank" rel="noopener noreferrer" href="pages/tidytuesday.html">Tidy Tuesday Submissions</a>
 	</div>	
 	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in R</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in Racket</a>
 	</div>	
 	<div class="work_item">
 	  <a target="_blank" rel="noopener noreferrer" href="pages/election.html">2016 Presidential Election Leaflet Map</a>
 	</div>	
 	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/guide.html">Beginner's Guide to Getting Started in R</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/guide.html">Beginner's Guide to Getting Started in Racket</a>
 	</div>
       </div>
     </div>
